Closed Bug 1072404 Opened 10 years ago Closed 10 years ago

Firefox may crash when the D3D device is removed while rendering

Categories

(Core :: Graphics, defect)

x86_64
Windows 8.1
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla35
Tracking Status
firefox33 --- fixed
firefox34 --- fixed
firefox35 --- fixed

People

(Reporter: bas.schouten, Assigned: bas.schouten)

References

Details

Attachments

(1 file)

We can try to deal with it. We cannot reproduce this scenario but we can see from our crash stats it's responsible for some percentage of our OOM|small crashes. This patch is a stab at trying to deal with it and recovering.
Attachment #8494638 - Flags: review?(matt.woodrow)
Attachment #8494638 - Flags: review?(matt.woodrow) → review+
Blocks: 1061693
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
Comment on attachment 8494638 [details] [diff] [review] Attempt to deal with a resetting rendering device. This patch has severely reduced the amount of OOM|small on nightly, it'd be good to uplift this to reduce our crash rates. Approval Request Comment [Feature/regressing bug #]: None [User impact if declined]: OOM|small crashes [Describe test coverage new/current, TBPL]: Nightly [Risks and why]: Very low [String/UUID change made/needed]: None
Attachment #8494638 - Flags: approval-mozilla-beta?
Attachment #8494638 - Flags: approval-mozilla-aurora?
Attachment #8494638 - Flags: approval-mozilla-beta?
Attachment #8494638 - Flags: approval-mozilla-beta+
Attachment #8494638 - Flags: approval-mozilla-aurora?
Attachment #8494638 - Flags: approval-mozilla-aurora+
And inbound at that...
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: