Bug 1072404: Firefox may crash when the D3D device is removed while rendering. r=mattwoodrow